--- a/sharek_safrtk/templates/base.html
+++ b/sharek_safrtk/templates/base.html
@@ -9,16 +9,16 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-2">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-img">
+      <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
+        <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-img" style="height:40px;">
+        <span class="ms-2 fw-bold">Sharek Safrtk</span>
       </a>
 
       <div>
         <a href="{% url 'login' %}" class="btn btn-success me-2">Login</a>
-        <a href="{% url 'register' %}" class="btn btn-success">Register</a>
+        <a href="{% url 'register' %}" class="btn btn-outline-success">Register</a>
       </div>
     </div>
   </nav>
