Clean up project and add new features

--- a/sharek_safrtk/meals/templates/meals/meal_form.html
+++ b/sharek_safrtk/meals/templates/meals/meal_form.html
@@ -37,7 +37,8 @@
             </div>
 
             <div class="form-check mb-3">
-              {{ form.available }} <label class="form-check-label">Available</label>
+              {{ form.available }}
+              <label class="form-check-label">Available</label>
             </div>
 
             <div class="d-grid">
